--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
-<body class="mat-typography">
+<body class="mat-typography" style="background-image: url(assets/bg.jpg); background-size: cover;">
   <app-root></app-root>
 </body>
 </html>
